// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login input Login input email render correctly 1`] = `
<input
  className="login__input form__input"
  name="email"
  onChange={[Function]}
  placeholder="Email"
  required={true}
  type="email"
  value="vasya@mail.ru"
/>
`;

exports[`Login input Login input password render correctly 1`] = `
<input
  className="login__input form__input"
  name="password"
  onChange={[Function]}
  placeholder="Password"
  required={true}
  type="password"
  value="ezpz"
/>
`;
